RESOLVED FIXED300815
[GTK] Fix cairo build after 301548@main
https://bugs.webkit.org/show_bug.cgi?id=300815
Summary [GTK] Fix cairo build after 301548@main
Patrick Griffis
Reported 2025-10-15 09:38:27 PDT
This header no longer is in WebCore but it was never used anyway.
Attachments
Patrick Griffis
Comment 1 2025-10-15 09:39:38 PDT
EWS
Comment 2 2025-10-15 09:43:05 PDT
Committed 301567@main (24d18b7a58ec): <https://commits.webkit.org/301567@main> Reviewed commits have been landed. Closing PR #52401 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.