[GTK] Fix cairo build after 301548@main https://bugs.webkit.org/show_bug.cgi?id=300815

Unreviewed, simple build fix

This header no longer is in WebCore but it was never used anyway.

* Source/WebCore/platform/graphics/cairo/ImageBufferUtilitiesCairo.cpp:

Canonical link: https://commits.webkit.org/301567@main